package ss10;

import ss8_mvc.model.Student;

import java.util.ArrayList;
import java.util.LinkedList;
import java.util.List;

public class Main {


    public static void main(String[] args) {
        ArrayList arrayList1 = new ArrayList<>();
//        arrayList1.add(1);
//        arrayList1.add("string");
//        arrayList1.add(new Student());
        ArrayList<Integer> arrayList = new ArrayList();
        // có chế auto boxing  tự động chuyển kiểu nguyên thuỷ sang kiểu đối tượng và lưu vào
        // Wrapper Class: int => Integer, long => Long, boolean => Boolean
//        arrayList.add(1);
//        arrayList.add(10);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        arrayList.add(20);
//        for (int i = 0; i <arrayList.size() ; i++) {
//            System.out.println(arrayList.get(i));
//        }
//       Student student1 = new Student();
//        Student student = new Student(1,"chánh");
//        LinkedList<Student> studentList = new LinkedList<>();
//         studentList.add(student);
//         studentList.add(new Student());
//        for (int i = 0; i <studentList.size() ; i++) {
//            System.out.println(studentList.get(i));
//        }
//
//        //
//        List<Student> students = new ArrayList<>();//
//        students.add(new Student());

    }

}
