package ss11_generic_stack_queue;

public class Box <T> {
    private  T t;

    public Box(){
    }
    public T getT() {
        return t;
    }

    public void setT(T t) {
        this.t = t;
    }
}
