package ss6_inheritance;

public class Classes {
   private int id;
   private String name;
}
