package ss6_inheritance;

public abstract class Employee  extends Person{
    private int salary;
    public int getBonous(){
        return 100;
    }

}
