package ss6_inheritance;

public interface ITotal extends Itraining,IGame {
}
