package ss6_inheritance;

public interface Itraining {
   static final int i =10;
    // phương thức trừu tượng
    void attendance();
    // method mặc định có từ jdk 8.
//    default void method1(){
//        System.out.println("mehtod có phân thân");
//    }
}
