package ss6_inheritance;

public class Seller  extends Employee{
    @Override
  public   void howToGo() {
        System.out.println("TVTS đi làm bằng máy bay");
    }
}
