package ss7.inteface;

public interface Colorable {
    void howToColor();
}
