package ss7.inteface;

public interface Resizeable {
    void resize(double percent);
}
