package ss9_test;

public class Calculator {
    public static void main(String[] args) {

    }

    public  int sum (int a, int b){
        return a+b;
    }

}
